<resources>
    <string name="app_name">东华游</string>
    <string name="text_gallery">图库</string>
    <string name="text_fullView">全景</string>
    <string name="text_close">关闭</string>
    <string name="text_speak">朗读</string>
    <string name="text_settings">地图风格</string>
    <string name="text_qa">对话</string>
    <string name="text_listening">正在聆听...</string>
    <string name="text_qa_again">继续对话</string>
    <string name="text_last">上一站</string>
    <string name="text_next">下一站</string>
    <string name="text_style_std">标准</string>
    <string name="text_style_real">实景</string>
    <string name="text_style_abs">手绘</string>
    <string name="nav_bar_settings_dialog_title">选择地图的显示风格</string>
    <string name="picture_preview_description">picture preview</string>
    <string name="search_hint">输入你想搜索的地名</string>

    <string name="dhu_details">东华大学，位于上海市，是中华人民共和国教育部直属的全国重点大学，是国家“世界一流学科建设高校”、“211工程“建设高校。学校设有18个学院，本科专业55个，学科涉及工学、理学等十大学科门类，有各类学生近3万人。</string>
    <string name="dhu_motto">崇德博学，砺志尚实。</string>

    <string name="dhu_department_1">1号学院楼</string>
    <string name="dhu_department_2">2号学院楼</string>
    <string name="dhu_department_3">3号学院楼</string>
    <string name="dhu_department_4">4号学院楼</string>
    <string name="dhu_department_5">5号学院楼</string>
    <string name="dhu_train_center">工程训练中心</string>
    <string name="dhu_admin">行政楼</string>
    <string name="dhu_dining_1">1食堂</string>
    <string name="dhu_dining_2">2食堂</string>
    <string name="dhu_normal_lib">综合实验楼</string>
    <string name="dhu_innovation_building">2011协同创新楼</string>
    <string name="dhu_teach_building_1">第1教学楼</string>
    <string name="dhu_teach_building_2">第2教学楼</string>
    <string name="dhu_inner_stadium">体育馆</string>
    <string name="dhu_out_stadium_1">体育场1</string>
    <string name="dhu_out_stadium_2">体育场2</string>
    <string name="dhu_dorm">宿舍区</string>
    <string name="dhu_activity_center">大学生活动中心</string>
    <string name="dhu_library">图文信息中心</string>
    <string name="dhu_teacher_house">教师之家</string>
    <string name="dhu_lake">镜月湖</string>
    <string name="dhu_bridge_j">镜桥</string>
    <string name="dhu_bridge_dh">东华桥</string>
    <string name="dhu_bridge_sh">尚实桥</string>
    <string name="dhu_bridge_lz">砺忠桥</string>
    <string name="dhu_bridge_y">月桥</string>
    <string name="dhu_gate_north">北大门</string>
    <string name="dhu_gate_east">东大门</string>
    <string name="dhu_road_dh">东华大道</string>

    <string name="dhu_department_1_msg">1号学院楼，大楼总建筑约1.1万平方米，一、二楼为计算机科学与技术学院，三楼为人文学院，五楼为外语学院。</string>
    <string name="dhu_department_2_msg">2号学院楼，大楼总建筑约1.4万平方米，A区为信息科学与技术学院，B区为理学院。</string>
    <string name="dhu_department_3_msg">3号学院楼，大楼总建筑约2.1万平方米，为纺织学院、化学化工与生物工程学院。</string>
    <string name="dhu_department_4_msg">4号学院楼，大楼总建筑约3万平方米，为机械工程学院、环境科学与工程学院。</string>
    <string name="dhu_department_5_msg">5号学院楼，大楼总建筑面积约2.6万平方米，为材料科学与工程学院和分析测试中心。</string>
    <string name="dhu_train_center_msg">中心总建筑面积约4600平方米，分设锻工、铸造、焊接、车工、铣工及数控等10余个车间，可供全校各类专业学生进行金工实习。</string>
    <string name="dhu_admin_msg">行政楼，学校管理机构办公地。</string>
    <string name="dhu_dining_1_msg">面积约3500平方米，分为上下两层，共有3000个座位</string>
    <string name="dhu_dining_2_msg">餐厅总建筑面积约8400平方米，1—2层为普通餐厅，3楼为招待餐厅，共有9个小包间和1个大堂，可举办各种招待、宴请活动。</string>
    <string name="dhu_normal_lib_msg">大楼总建筑面积约1.5万平方米，1楼和A区各楼层为物理实验室，B区2—3楼为电子电路实验室，4－5楼设9个语音室。大楼后方有化学实验楼，总建筑面积约6400平方米，实验设施齐全，能为纺织、化工、材料类学生提供化学实验环境。</string>
    <string name="dhu_innovation_building_msg">2011协同创新楼</string>
    <string name="dhu_teach_building_1_msg">与第2教学楼是一体建筑，1、2教学楼大楼总建筑面积近5万平方米，共有各类教室150余间，座位1.5万个。其中多媒体教室近70间，配有计算机、投影仪、实物展示台，网络，音响设备，教师可以通过上网查询、下载、传递、转播等电子手段上课。</string>
    <string name="dhu_teach_building_2_msg">与第1教学楼是一体建筑，1、2教学楼大楼总建筑面积近5万平方米，共有各类教室150余间，座位1.5万个。其中多媒体教室近70间，配有计算机、投影仪、实物展示台，网络，音响设备，教师可以通过上网查询、下载、传递、转播等电子手段上课。</string>
    <string name="dhu_inner_stadium_msg">场馆总建筑面积10480平方米，为学生上课和业余活动用室内体育场地，包括篮排球、手球、羽毛球、乒乓球、攀岩等场地及跆拳道房、武术健身房、室外游泳池等。</string>
    <string name="dhu_out_stadium_1_msg">体育场中有一个400米塑胶跑道的标准田径场，内设人工草皮足球场，周围有10000座位的看台，可以举办大型活动。</string>
    <string name="dhu_out_stadium_2_msg">体育场中有10个篮球场，9个排球场，8个网球场，1个沙滩排球场和1个手球场。</string>
    <string name="dhu_dorm_msg">学校学生入住东方明珠二期学生公寓，地址：文汇路300弄。本科生4个人1间，房内有阳台，电扇，电话；每层厕所公用，楼底层有公共浴室。</string>
    <string name="dhu_activity_center_msg">活动中心建筑面积约1万平方米，分为艺术排练、休闲娱乐等区域。中心共有乒乓房、健身操房、琴房、桌球房、视听室、音乐室、棋牌室等40多个活动室；一楼公共服务区内设教育超市，书店，邮局，银行自动取款机和一个1000座位的剧场。</string>
    <string name="dhu_library_msg">图文信息大楼：大楼总建筑面积4.1万平方米，由图书馆、学术会议中心、计算中心和网络中心等组成。计算中心有9个机房，配有1000多台计算机，为全校学生提供上机服务。会议中心拥有3个多功能报告厅和7个小会议室，安装现代化的电气设备和音响系统，可举行各类报告会、学术研讨会。</string>
    <string name="dhu_teacher_house_msg">大楼建有185个单人客房，内设空调、淋浴、电视、电话、网络等现代化设备，可供教师临时住宿。</string>
    <string name="dhu_lake_msg">镜月湖，面积100余亩，被国家水利部正式命名为“国家生态水利风景区”，是松江区七个水利风景区之一，也是松江大学园区中唯一的国家生态水利风景区。</string>
    <string name="dhu_bridge_j_msg">镜桥，连接了大学生活动中心和教学区域，为学生在课余活动、就餐和上课之间提供了便利。在桥上可以欣赏东华镜月湖的景色。</string>
    <string name="dhu_bridge_dh_msg">东华桥</string>
    <string name="dhu_bridge_sh_msg">尚实桥</string>
    <string name="dhu_bridge_lz_msg">砺忠桥</string>
    <string name="dhu_bridge_y_msg">月桥</string>
    <string name="dhu_gate_north_msg">北大门，从此处进入校园会到达学校的学院楼区域。</string>
    <string name="dhu_gate_east_msg">东大门，校门口竖立一块巨石，石面上刻有东华大学校名，是东华大学的标志性景观之一。从此处进入学校会到达东华大道。</string>
    <string name="dhu_road_dh_msg">东华大道，沿途有实验室等建筑，大道途径东华桥，在桥上可以欣赏到东华镜月湖的景色，是东华大学不错的参观之地。</string>



</resources>