<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/radioGroup_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner_bg"
    android:paddingHorizontal="30dp"
    android:paddingVertical="15dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:paddingBottom="20dp"
        android:text="@string/nav_bar_settings_dialog_title"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="25dp">
            <RadioButton
                android:id="@+id/radio_style_abs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_style_abs"
                android:textSize="18sp"
                />
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/preview_style_abs"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="25dp"
            >
            <RadioButton
                android:id="@+id/radio_style_real"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_style_real"
                android:textSize="18sp"
                />
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/preview_style_real"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/radio_style_std"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_style_std"
                android:textSize="18sp"
                />
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/preview_style_std"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>